MAHOUT-1766: Increase default PermGen size for spark-shell